# presales-planner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0003_project_priority.py  0004_task_source_history_planversion_check.py  0005_task_required_skills.py  0006_plan_version_status_superseded.py  25365964fe62_capability_layer_roles_skills_role_.py
docs/: SPEC.md  acceptance.md  architecture.md  deploy-checklist.md  mvp-acceptance-tests.md  qa-report-2026-06-11.md
plans/: 001-jwt-secret-fail-fast.md  002-dev-login-loopback-gate.md  003-known-sender-gate.md  004-throttle-middleware.md  005-web-input-validation.md  006-parser-date-valueerror.md  007-vacation-ghost-person.md  008-delete-project-misclassified.md  009-audit-attribution.md  010-voice-handler-hardening.md  011-confirm-plan-atomic-transition.md  012-edit-loop-supersede.md  013-wire-calendar-refresh.md  014-add-project-atomicity.md  015-llm-client-hardening.md  016-persist-template-tasks.md  017-migrate-jose-to-pyjwt.md  018-capture-task-write-gate.md  019-load-board-rounding.md  020-board-route-hardening.md  021-lifecycle-scheduler-resilience.md  022-whatif-faithful-baseline.md  023-capability-coverage-invariant.md  024-render-figure-leak.md  025-seed-capability-idempotency.md  README.md
seed/: capability.yaml  load.py  load_seed.py  tasks_lite.yaml  tasks_standard.yaml  team.yaml
tests/: conftest.py
(+169 files in other folders)
